Work to CMS project

--- a/lesson_8/CMS_project/views/index.erb
+++ b/lesson_8/CMS_project/views/index.erb
@@ -4,6 +4,7 @@
     <type>
   </head>
   <body>
+    <%= session.delete(:error) if session[:error] %>
     <ul>
       <% @files.each do |file| %>
         <li><a href="/<%= file %>"><%= file %></a></li>
