Some work to CMS project. Moved to LS202 for most of today

--- a/lesson_8/CMS_project/views/index.erb
+++ b/lesson_8/CMS_project/views/index.erb
@@ -4,10 +4,13 @@
     <type>
   </head>
   <body>
-    <%= session.delete(:error) if session[:error] %>
+    <%= session.delete(:message) if session[:message] %>
     <ul>
       <% @files.each do |file| %>
-        <li><a href="/<%= file %>"><%= file %></a></li>
+        <li>
+          <a href='/<%= file %>'><%= file %></a>
+          <a href='/<%= file %>/edit'>Edit</a>
+        </li>
       <% end %>
     </ul>
   </body>
