Restarted CMS project after completign LS202 first 5 lessons

--- a/lesson_8/CMS_project/views/index.erb
+++ b/lesson_8/CMS_project/views/index.erb
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang='en-US'>
   <head>
-    <type>
+    <title>Home</title>
   </head>
+
   <body>
-    <%= session.delete(:message) if session[:message] %>
+    <p><%= session.delete(:message) if session[:message] %></p>
+
     <ul>
       <% @files.each do |file| %>
         <li>
           <a href='/<%= file %>'><%= file %></a>
-          <a href='/<%= file %>/edit'>Edit</a>
+          <a href='/<%= file %>/edit'>edit</a>
         </li>
       <% end %>
     </ul>
   </body>
-</html>
