--- a/lesson_8/CMS_project/views/edit.erb
+++ b/lesson_8/CMS_project/views/edit.erb
@@ -1,7 +1,8 @@
 <form action='/<%= params[:filename] %>' method='post'>
-  <label for='content'>Edit contents of <%= params[:file] %>:</lable>
+  <label for='content'>Edit contents of '<%= params[:filename] %>':</lable>
   <div>
     <textarea name='content' id='content' cols=70 rows=10 value=<%= @file %>><%= @content %></textarea>
   </div>
+
   <button type='submit'>Save Changes</button>
 </form>
