--- a/lesson_8/CMS_project/views/index.erb
+++ b/lesson_8/CMS_project/views/index.erb
@@ -1,10 +1,13 @@
-<p><%= session.delete(:message) if session[:message] %></p>
-
 <ul>
   <% @files.each do |file| %>
     <li>
       <a href='/<%= file %>'><%= file %></a>
       <a href='/<%= file %>/edit'>edit</a>
+      <form action='/<%= file %>/delete' method='post' class='inline'>
+        <button type='submit'>delete</button>
+      </form>
     </li>
   <% end %>
 </ul>
+
+<p><a href='/new'>New Document</a></p>
