Even more work to CMS

--- a/lesson_8/CMS_project/public/cms.css
+++ b/lesson_8/CMS_project/public/cms.css
@@ -23,7 +23,7 @@ form.inline {
   display: inline;
 }
 
-dl.inline dt,
-dl.inline dd {
-  display: inline-block;
+.user-status {
+  font-style: italic;
+  font-size: 0.9em;
 }
