--- a/lesson_8/CMS_project/views/index.erb
+++ b/lesson_8/CMS_project/views/index.erb
@@ -11,3 +11,16 @@
 </ul>
 
 <p><a href='/new'>New Document</a></p>
+
+<% if session[:username] %>
+  <form action='/users/signout' method='post'>
+    <p class='user-status'>
+      Signed in as <%= session[:username] %>.
+      <button type='submit'>Sign out</button>
+    </p>
+  </form>
+<% else %>
+  <form action='/users/signin' method='get'>
+    <button type='submit'>Sign in</button>
+  </form>
+<% end %>
