--- a/lesson_8/CMS_project/views/edit.erb
+++ b/lesson_8/CMS_project/views/edit.erb
@@ -1,3 +1,5 @@
+<link ref='stylesheet' href='public/cms.css'>
+
 <form action='/<%= params[:filename] %>' method='post'>
   <label for='content'>Edit contents of '<%= params[:filename] %>':</lable>
   <div>
