--- a/lesson_8/CMS_project/views/index.erb
+++ b/lesson_8/CMS_project/views/index.erb
@@ -15,7 +15,7 @@
 <% if session[:username] %>
   <form action='/users/signout' method='post'>
     <p class='user-status'>
-      Signed in as <%= session[:username] %>.
+      Signed in as '<%= session[:username] %>'.
       <button type='submit'>Sign out</button>
     </p>
   </form>
