More work to bike shop project

--- a/lesson_8/bike_shop/public/stylesheets/shop.css
+++ b/lesson_8/bike_shop/public/stylesheets/shop.css
@@ -1,11 +1,15 @@
 * {
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   box-sizing: border-box;
 }
 
 body {
   margin: 10px;
+}
+
+header li {
+  display: inline-block;
 }
 
 label {
