--- a/lesson_8/bike_shop/views/pricing.erb
+++ b/lesson_8/bike_shop/views/pricing.erb
@@ -1,1 +1,45 @@
 <!-- Create a YAML file for prices -->
+
+<table>
+  <thead>
+    <tr>
+      <th>Service</th>
+      <th>Price</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr>
+      <th>Tune-up</th>
+      <td>$140</td>
+      <td>Adjust derailleur, brakes, and other adjustable parts of bike. Clean frame, wheels, and drivetrain.</td>
+    </tr>
+
+    <tr>
+      <th>Adjust Derailleur</th>
+      <td>$20</td>
+      <td>Index derailleur and set its limits.</td>
+    </tr>
+
+    <tr>
+      <th>Adjust Brake</th>
+      <td>$20</td>
+      <td>Center brake caliper and set correct cable tension.</td>
+    </tr>
+
+    <tr>
+      <th>Frame and Wheel Clean</th>
+      <td>$15</td>
+      <td>Deep clean and polish of frame and all wheels</td>
+    </tr>
+
+    <tr>
+      <th>Chain Install</th>
+      <td>$25</td>
+      <td>Cut and install new chain. (Chain not included)</td>
+    </tr>
+  </tbody>
+
+    
+</table>
