--- a/lesson_8/bike_shop/views/layout.erb
+++ b/lesson_8/bike_shop/views/layout.erb
@@ -14,6 +14,8 @@
         <li><a href='/pricing'>Pricing</a></li>
       </ul>
 
+      <h1>Sprocket Change</h1>
+
       <% if session[:message] %>
         <p><%= session.delete(:message) %></p>
       <% end %>
