--- a/lesson_8/bike_shop/views/lookup.erb
+++ b/lesson_8/bike_shop/views/lookup.erb
@@ -1,4 +1,7 @@
-<h2>Customer Lookup</h2>
+<h2 class='inline_block'>Customer Lookup</h2>
+<form id='inline_block' action='/customers/new' method='get'>
+  <button type='submit'>New Customer?</button>
+</form>
 
 <form action='/customers/lookup' method='post'>
     <label for='first_name'>
