Fixed WO problems, added a new tab and section to customer profile

--- a/lesson_8/bike_shop/public/stylesheets/shop.css
+++ b/lesson_8/bike_shop/public/stylesheets/shop.css
@@ -16,7 +16,7 @@ label {
   display: block;
 }
 
-dl#bicycle_info dt,
-dl#bicycle_info dd {
+dl#workorder_info dt,
+dl#workorder_info dd {
   display: inline;
 }
