--- a/lesson_8/bike_shop/views/customer.erb
+++ b/lesson_8/bike_shop/views/customer.erb
@@ -1,13 +1,13 @@
 <h2><%= "#{@name}" %></h2>
 <ul>
-  <li>Member Number: <%= params[:member_number] %></li>
+  <li>Member Number: <%= @customer[:member_number] %></li>
   <li>Phone Number: <%= @customer[:phone_number] %></li>
   <li>Email Number: <%= @customer[:email] %></li>
 </ul>
 
 <h3>Equipment</h3>
 
-<form action='/customers/<%= params[:member_number] %>/bicycles/new' method='get'>
+<form action='/customers/<%= @customer[:member_number] %>/bicycles/new' method='get'>
   <button type='submit'>Add New Bike</button>
 </form>
 
@@ -16,7 +16,7 @@
     <% @customer[:bicycles].each do |bicycle_number, bicycle| %>
       <li>
         <%= "#{bicycle[:make]} #{bicycle[:model]}" %>
-        <form action='/workorders/<%= "#{params[:member_number]}/#{bicycle_number}" %>/new' method='post'>
+        <form action='/workorders/<%= "#{@customer[:member_number]}/#{bicycle_number}" %>/new' method='post'>
           <button type='submit'>New Maintenance</button>
         </form>
       </li>
@@ -27,11 +27,11 @@
 <% end %>
 
 <h3>Work Orders</h3>
-<% if @customer['workorders'] %>
+<% if @customer[:workorders] %>
   <ul>
-    <% @customer['workorders'].each do |workorder_number| %>
+    <% @customer[:workorders].each do |workorder_number, info| %>
       <li>
-        <%= workorder_number %>
+        <a href='/workorders/<%= workorder_number %>'>WO #<%= workorder_number %></a>
       </li>
     <% end %>
   </ul>
