--- a/lesson_8/bike_shop/views/home.erb
+++ b/lesson_8/bike_shop/views/home.erb
@@ -1,6 +1,6 @@
 <h2>Navigation</h2>
 <ul>
   <li><a href='/customers/lookup'>Customer Lookup</a></li>
-  <li><a href='/schedule'>Work Schedule</a></li>
+  <li><a href='/workorders'>Existing Workorders</a></li>
   <li><a href='/pricing'>General Pricing</a></li>
 </ui>
