--- a/lesson_8/bike_shop/views/layout.erb
+++ b/lesson_8/bike_shop/views/layout.erb
@@ -10,7 +10,7 @@
       <ul>
         <li><a href='/home'>Home</a></li>
         <li><a href='/customers/lookup'>Customers</a></li>
-        <li><a href='/schedule'>Schedule</a></li>
+        <li><a href='/workorders'>Workorders</a></li>
         <li><a href='/pricing'>Pricing</a></li>
       </ul>
 
